--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-theme: jekyll-theme-minimal
+theme: academicpages/academicpages.github.io
 title: 1st ACM Workshop on Mobile and Wireless Computing for AgeTech
