--- a/_data/chairs.yml
+++ b/_data/chairs.yml
@@ -2,20 +2,25 @@ general_chairs:
   - firstname: Benjamin  
     lastname: Marlin
     institution: Associate Professor, Manning College of Information and Computer Sciences, University of Massachusetts Amherst.
+    link: https://groups.cs.umass.edu/
   - firstname: Asif 
     lastname: Salekin
     institution: Assistant Professor, Electrical Engineering and Computer Science, Syracuse University.
+    link: https://asalekin.github.io/
   - firstname: Deepak
     lastname: Ganesan 
     institution: Professor, Manning College of Information and Computer Sciences, University of Massachusetts Amherst. 
+    link: https://people.cs.umass.edu/~dganesan/
 
 steering:
   - firstname: Tarek
     lastname: Abdelzaher
     institution: Professor of Computer Science, University of Illinois.
+    link: https://people.cs.umass.edu/~dganesan/
   - firstname: Niteesh   
     lastname: Choudhry
     institution: Professor, Harvard Medical School and Department of Medicine, Brigham and Women's Hospital.
+    link: https://postgraduateeducation.hms.harvard.edu/faculty-staff/niteesh-choudhry
 
 #poster_demo_chairs:
 #  - firstname: 
