--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -1,5 +1,5 @@
 all_sponsors:
-   - name: Massachusetts AI and Technology Center for Connected Care in Aging and Alzheimer’s Disease 
+   - name: Massachusetts AI and Technology Center for Connected Care in Aging and Alzheimer's Disease 
      link: https://massaitc.org/
      logo: massaitc.png
 
