--- a/_data/tpc.yml
+++ b/_data/tpc.yml
@@ -7,6 +7,9 @@
 - firstname: Amar 
   lastname: Basu
   institution: Electrical and Computer Engineering, Wayne State University.
+- firstname: Sudeshna	  
+  lastname: Das
+  institution: Massachusetts General Hospital and Harvard Medical School.
 - firstname: Erik    
   lastname: Larsen
   institution: Sonde Health, Inc.
