--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -1,5 +1,5 @@
-submission: July 19<sup>th</sup>, 2024 (11:59pm US Pacific Time)
-notification: August 30<sup>th</sup>, 2024
+submission: July 19<sup>th</sup>, 2024 (11:59pm AoE)
+notification: August 30<sup>th</sup>, 2024 
 camera_ready: September 6<sup>th</sup>, 2024
-poster_demo_submission: September 13<sup>th</sup>, 2024
+poster_demo_submission: September 13<sup>th</sup>, 2024 (11:59pm AoE)
 poster_demo_notification: September 27<sup>th</sup>, 2024
