--- a/_data/tpc.yml
+++ b/_data/tpc.yml
@@ -7,6 +7,9 @@
 - firstname: Sudeshna	  
   lastname: Das
   institution: Massachusetts General Hospital and Harvard Medical School.
+- firstname: Maria	  
+  lastname: Gorlatova
+  institution: Electrical and Computer Engineering, Duke University
 - firstname: Bashima 
   lastname: Islam
   institution: Department of Electrical and Computer Engineering, Worcester Polytechnic Institute.
