--- a/_data/tpc.yml
+++ b/_data/tpc.yml
@@ -9,7 +9,7 @@
   institution: Massachusetts General Hospital and Harvard Medical School.
 - firstname: Maria	  
   lastname: Gorlatova
-  institution: Electrical and Computer Engineering, Duke University
+  institution: Electrical and Computer Engineering, Duke University.
 - firstname: Bashima 
   lastname: Islam
   institution: Department of Electrical and Computer Engineering, Worcester Polytechnic Institute.
@@ -19,6 +19,9 @@
 - firstname: Ivan	   
   lastname: Lee
   institution: Manning College of Information and Computer Sciences, University of Massachusetts Amherst. 
+- firstname: Yang	  
+  lastname: Liu
+  institution: Department of Computer Science and Technology, University of Cambridge.
 - firstname: Varun   
   lastname: Mishra
   institution: Khoury College of Computer Sciences and the Bouvé College of Health Sciences, Northeastern University.
