--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -1,5 +1,5 @@
-submission: <del>July 19<sup>th</sup>, 2024</del> Aug 2<sup>nd</sup>, 2024 (11:59pm US Pacific Time)
-notification: <del>August 30<sup>th</sup>, 2024</del> September 6<sup>th</sup>, 2024
-camera_ready: <del>September 6<sup>th</sup>, 2024</del> September 13<sup>th</sup>, 2024
+submission: <del>July 19th, 2024</del> Aug 2<sup>nd</sup>, 2024 (11:59pm US Pacific Time)
+notification: <del>August 30th, 2024</del> September 6<sup>th</sup>, 2024
+camera_ready: <del>September 6th, 2024</del> September 20<sup>th</sup>, 2024
 poster_demo_submission: September 13<sup>th</sup>, 2024 (11:59pm AoE)
 poster_demo_notification: September 27<sup>th</sup>, 2024
