--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -58,3 +58,12 @@
   affiliation: Professor, University of Pennsylvania
   link: https://www.nursing.upenn.edu/live/profiles/15259-george-demiris
 
+- firstname:   VP
+  lastname:    Nguyen 
+  affiliation: Assistant Professor, University of Massachusetts Amherst
+  link: https://people.cs.umass.edu/~phuc/
+
+- firstname:   Jie 
+  lastname:    Xiong 
+  affiliation: Associate Professor, University of Massachusetts Amherst
+  link: https://people.cs.umass.edu/~jxiong/
