update draft program

--- a/_data/program.yml
+++ b/_data/program.yml
@@ -67,7 +67,7 @@ sessions:
 
  - start: 4:40pm
    end: 5:25am
-   title: "Panel Discussion: AgeTech Funding"
+   title: "Panel Discussion: AgeTech Funding and Accelerators"
    name: panel-funding
    type: panel
 
