--- a/_data/program.yml
+++ b/_data/program.yml
@@ -109,7 +109,7 @@ speakers:
     url:  https://www.nia.nih.gov/about/staff/bhattacharyya-partha
 
   - name: Amelia Hay
-    title: VP of Startup Programming and Investments at AgeTech Collaborative™, AARP.
+    title: VP of Startup Programming and Investments at AgeTech Collaborative™ from AARP.
     session: panel-funding
     url:  https://aarpinnovationlabs.org
 
